--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -2,16 +2,11 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    some-label: some-label-value
+    some-label: promo-app
 spec:
   containers:
-  - name: maven
-    image: maven:alpine
-    command:
-    - cat
-    tty: true
-  - name: busybox
-    image: busybox
+  - name: bash
+    image: bash
     command:
     - cat
     tty: true
